# test_repository_for_rental_store

./: README.md  pyproject.toml
results/: log.html  output.xml  report.html
tests/: tests.robot
